<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="*">
    <TableRow>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_help_menu"
            android:layout_span="3"
            android:layout_marginBottom="10dip"
            android:layout_marginRight="20dip"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_help_add_button"
            android:textStyle="bold"
            android:layout_marginRight="20dip"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_add_button"
            android:layout_marginBottom="10dip"
            android:layout_weight="3"
            android:justificationMode="inter_word"
            android:layout_marginRight="5dip"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_help_modify_button"
            android:textStyle="bold"
            android:layout_marginRight="20dip"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_modify_button"
            android:layout_marginBottom="10dip"
            android:layout_weight="3"
            android:justificationMode="inter_word"
            android:layout_marginRight="5dip"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_help_suppress_button"
            android:textStyle="bold"
            android:layout_marginRight="10dip"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_suppress_button"
            android:layout_marginBottom="10dip"
            android:layout_weight="3"
            android:justificationMode="inter_word"
            android:layout_marginRight="5dip"/>
    </TableRow>

</TableLayout>