<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="*">
    <TableRow>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="10dip"
            android:layout_marginBottom="10dip"
            android:text="@string/title_add_input"
            android:layout_span="3"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="10dip"
            android:layout_marginBottom="10dip"
            android:text="@string/label_name_input"
            />
        <EditText
            android:id="@+id/saisieArticle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/placeholder_add_title"
            />
    </TableRow>
</TableLayout>